--- a/Resources/app/src/App.css
+++ b/Resources/app/src/App.css
@@ -12,16 +12,47 @@
     animation: App-logo-spin infinite 600s linear;
   }
 }
-
+.out-most{
+  background-color: rgb(110, 110, 110);
+  padding-left:7px;
+  padding-top:7px;
+  padding-right:7px;
+  padding-bottom:7px;
+  width:'100%';
+  height:calc(100vh - 14px);
+  align-items: center;
+  justify-content: center;
+  overflow: auto;
+}
+.outter{
+  background-color: rgb(90, 90, 90);
+  padding-left:7px;
+  padding-top:7px;
+  padding-right:7px;
+  padding-bottom:7px;
+  border-radius: 3px;
+  height:calc(100vh - 28px);
+  width:calc(100% - 14px);
+  align-items: center;
+  justify-content: center;
+  display:flex;
+  /* flex-direction: column; */
+}
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: rgb(134,134,134);
+  padding-left:7px;
+  padding-top:7px;
+  padding-right:7px;
+  padding-bottom:7px;
+  height:calc(100vh - 42px);
+  width:calc(100% - 14px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
+  
 }
 
 .App-link {
